@@ -1,3 +1,10 @@
+2007-10-09  Bastien Nocera  <hadess@hadess.net>
+
+	* schemas/apps_gnome_settings_daemon_keybindings.schemas.in:
+	Default to using XF86* keysyms for the audio related keybindings,
+	allows those to work out-of-the-box when the right keymap is
+	selected (Closes: #485076)
+
 2007-10-08  Sergey Udaltsov <svu@gnome.org>
 
 	* configure.in: bumping libgnomekbd requirement to 2.21.1
